removidas imagens padroes / adicionada imagem da parte inicial / adicionado conteudo base recebido por email

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="AMA Cxs">
+	<meta name="author" content="Bruno Marsilio">
 
-	<title>Ninestars bootstrap 3 one page template</title>
+	<title>AMA Cxs</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -41,29 +41,36 @@
 						</li>
 						<li><a href="#service" class="gn-icon gn-icon-cog">Service</a></li>
 						<li><a href="#works" class="gn-icon gn-icon-help">Works</a></li>
-						<li>
-							<a href="#contact" class="gn-icon gn-icon-archive">Contact</a>
-						</li>
 					</ul>
 				</div><!-- /gn-scroller -->
 			</nav>
 		</li>
-		<li><a href="index.html">NINESTARS</a></li>
-		<li><ul class="company-social">
-			<li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-			<li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-			<li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-			<li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-		</ul>	</li>
+		<li><a href="index.html">AMA Cxs</a></li>
+		<li>
+			<ul class="company-social">
+				<li class="social-facebook"><a href="https://www.facebook.com/AMACaxias" target="_blank" style="margin-right: 25px"><i class="fa fa-facebook"></i></a></li>
+			</ul>
+		</li>
 	</ul>
 </div>
 
 <!-- Section: intro -->
 <section id="intro" class="intro">
-	<div class="slogan">
-		<h1>This is Ninestars</h1>
-		<p>make awesome stuff with Bootstrap framework</p>
-		<a href="#about" class="btn btn-skin scroll">Learn more</a>
+	<div class="slogan container">
+		<div class="row">
+			<h1 class="pull-left">AMA Caxias do Sul</h1>
+		</div>
+
+		<div class="row">
+			<p class="pull-left">Autismo não tem cura, preconceito sim!</p>
+		</div>
+
+		<div class="row pull-left">
+			<a href="#about" class="btn btn-skin">Mais info</a>
+		</div>
+
+
+
 	</div>
 </section>
 <!-- /Section: intro -->
@@ -76,60 +83,10 @@
 				<div class="col-lg-8 col-lg-offset-2">
 
 					<div class="section-heading">
-						<h2>About us</h2>
-						<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
-					</div>
+						<h2>Quem somos</h2>
+						<p>A  AMA Caxias do sul é uma Associação sem fins lucrativos que tem por missão promover e disseminar informações sobre o Transtorno do Espectro Autista TEA,além de assistir seus familiares, promovendo encontros para o fortalecimento de vínculos.</div>
 
 				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-
-		<div class="row">
-			<div class="col-xs-6 col-sm-3 col-md-3">
-
-				<div class="team boxed-grey">
-					<div class="inner">
-						<h5>Anna Hanaceck</h5>
-						<p class="subtitle">Pixel Crafter</p>
-						<div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive" /></div>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-
-				<div class="team boxed-grey">
-					<div class="inner">
-						<h5>Maura Daniels</h5>
-						<p class="subtitle">Ruby on Rails</p>
-						<div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive" /></div>
-					</div>
-
-				</div>
-			</div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-
-				<div class="team boxed-grey">
-					<div class="inner">
-						<h5>Jack Briane</h5>
-						<p class="subtitle">jQuery Ninja</p>
-						<div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive" /></div>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-
-				<div class="boxed-grey">
-					<div class="inner">
-						<h5>Tom Petterson</h5>
-						<p class="subtitle">Typographer</p>
-						<div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive" /></div>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</div>
@@ -146,70 +103,16 @@
 				<div class="col-lg-8 col-lg-offset-2">
 
 					<div class="section-heading">
-						<h2>Our Services</h2>
-						<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
+						<h2>O QUE É O AUTISMO ?</h2>
+						<p>Embora inúmeras pesquisas ainda venham sendo desenvolvidas para definirmos o que seja o autismo, desde a primeira descrição feita por Kanner em 1943 existe um consenso em torno do entendimento de que o que caracteriza o autismo são aspectos observáveis que indicam déficits na comunicação e na interação social, além de comportamentos repetitivos e áreas restritas de interesse. Essas características estão presentes antes dos 3 anos de idade, e atingem 0,6% da população, sendo quatro vezes mais comuns em meninos do que em meninas.A noção de espectro do autismo foi descrita por Lorna Wing em 1988, e sugere que as características do autismo variam de acordo com o desenvolvimento cognitivo; assim,  temos os quadros de autismo associados à deficiência intelectual grave, sem o desenvolvimento da linguagem, com padrões repetitivos simples e bem marcados de comportamento e déficit importante na interação social, e podemos ter quadros de autismo, chamados de Síndrome de Asperger, sem deficiência intelectual, sem atraso significativo na linguagem, com interação social peculiar e bizarra, e sem movimentos repetitivos tão evidentes.
+						</p>
 					</div>
 
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-3 col-md-3">
 
-				<div class="service-box">
-					<div class="service-icon">
-						<i class="fa fa-code fa-3x"></i>
-					</div>
-					<div class="service-desc">
-						<h5>Print</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-sm-3 col-md-3">
-
-				<div class="service-box">
-					<div class="service-icon">
-						<i class="fa fa-suitcase fa-3x"></i>
-					</div>
-					<div class="service-desc">
-						<h5>Web Design</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-sm-3 col-md-3">
-
-				<div class="service-box">
-					<div class="service-icon">
-						<i class="fa fa-cog fa-3x"></i>
-					</div>
-					<div class="service-desc">
-						<h5>Photography</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-sm-3 col-md-3">
-
-				<div class="service-box">
-					<div class="service-icon">
-						<i class="fa fa-rocket fa-3x"></i>
-					</div>
-					<div class="service-desc">
-						<h5>Cloud System</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
 </section>
 <!-- /Section: services -->
 
@@ -222,8 +125,128 @@
 				<div class="col-lg-8 col-lg-offset-2">
 
 					<div class="section-heading">
-						<h2>Recent Works</h2>
-						<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
+						<h2>O Que fazemos?</h2>
+						<p>
+							Buscamos Ajudar no bem estar das pessoas com Autismo através da.
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+
+			<div class="row">
+				<div class="col-xs-6 col-sm-3 col-md-3">
+
+					<div class="team boxed-grey">
+						<div class="inner">
+							<h5>Conscientização  da sociedade:
+							</h5>
+							<p class="subtitle">
+								Evento Tarde Azul realizado no parque
+								Getulio Vargas com parceria da coordenadoria
+								da acessibilidade da prefeitura municipal
+								de Caxias do sul
+
+							</p>
+
+						</div>
+					</div>
+
+
+				</div>
+
+				<div class="col-xs-6 col-sm-3 col-md-3">
+					<div class="team boxed-grey">
+						<div class="inner">
+							<h5>Apoio as famílias:
+
+							</h5>
+							<p class="subtitle">
+								Reunião mensal com Familiares e
+								grupo de apoio
+
+
+							</p>
+						</div>
+					</div>
+
+					<br />
+
+					<div class="team boxed-grey">
+						<div class="inner">
+							<h5>Disseminação do conhecimento sobre  Autismo
+								Orientação sobre o tema e palestras.
+
+
+							</h5>
+							<p class="subtitle">
+
+
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-xs-6 col-sm-3 col-md-3">
+					<div class="team boxed-grey">
+						<div class="inner">
+							<h5>Defesa dos direitos das pessoas
+								com autismo:
+
+
+
+							</h5>
+							<p class="subtitle">
+								participação em audiências
+								Publicas, Conselhos municipais
+								da deficiência e saúde
+
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-xs-6 col-sm-3 col-md-3">
+					<div class="team boxed-grey">
+						<div class="inner">
+							<h5>Eventos beneficentes:
+
+
+
+
+
+							</h5>
+							<p class="subtitle">
+								Almoços, feiras roupas
+
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+</section>
+<!-- /Section: works -->
+
+<section id="works" class="home-section text-center bg-gray">
+	<div class="heading-works marginbot-50">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+
+					<div class="section-heading">
+						<h2>Atividades recentes
+						</h2>
+						<p></p>
 					</div>
 
 				</div>
@@ -251,136 +274,22 @@
 							<img src="img/works/3.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
-					<div class="col-md-3">
-						<a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-							<img src="img/works/4.jpg" class="img-responsive" alt="img">
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a href="img/works/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-							<img src="img/works/5.jpg" class="img-responsive" alt="img">
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a href="img/works/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-							<img src="img/works/6.jpg" class="img-responsive" alt="img">
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a href="img/works/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-							<img src="img/works/7.jpg" class="img-responsive" alt="img">
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a href="img/works/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-							<img src="img/works/8.jpg" class="img-responsive" alt="img">
-						</a>
-					</div>
+
 				</div>
 
 			</div>
 		</div>
 	</div>
 </section>
-<!-- /Section: works -->
-
-<!-- Section: contact -->
-<section id="contact" class="home-section text-center">
-	<div class="heading-contact marginbot-50">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2">
-
-					<div class="section-heading">
-						<h2>Get in touch</h2>
-						<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-
-		<div class="row">
-			<div class="col-lg-8 col-md-offset-2">
-				<div class="boxed-grey">
-					<form id="contact-form">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<label for="name">
-										Name</label>
-									<input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-								</div>
-								<div class="form-group">
-									<label for="email">
-										Email Address</label>
-									<div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-										<input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-								</div>
-								<div class="form-group">
-									<label for="subject">
-										Subject</label>
-									<select id="subject" name="subject" class="form-control" required="required">
-										<option value="na" selected="">Choose One:</option>
-										<option value="service">General Customer Service</option>
-										<option value="suggestions">Suggestions</option>
-										<option value="product">Product Support</option>
-									</select>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<label for="name">
-										Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-									  placeholder="Message"></textarea>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-									Send Message</button>
-							</div>
-						</div>
-					</form>
-				</div>
-
-				<div class="widget-contact row">
-					<div class="col-lg-6">
-						<address>
-							<strong>Ninestars Ltd.</strong><br>
-							Big Villa 334 Awesome, Beautiful Suite 1200<br>
-							San Francisco, CA 94107<br>
-							<abbr title="Phone">P:</abbr> (123) 456-7890
-						</address>
-					</div>
-
-					<div class="col-lg-6">
-						<address>
-							<strong>Email</strong><br>
-							<a href="mailto:#">email.name@example.com</a><br />
-							<a href="mailto:#">name.name@example.com</a>
-						</address>
-
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-</section>
-<!-- /Section: contact -->
+<!--ancora-->
+<a href="#home" class="scroll scroll-b"><span class="glyphicon glyphicon-chevron-up"></span></a>
 
 <footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-lg-12">
 
-				<p>Copyright &copy; 2014 Ninestars - by <a href="http://bootstraptaste.com">Bootstraptaste</a></p>
+				<p class="pull-right">Copyright &copy; 2014 Ninestars - by <a href="http://bootstraptaste.com">Bootstraptaste</a></p>
 			</div>
 		</div>
 	</div>
@@ -397,6 +306,17 @@
 <script src="js/stellar.js"></script>
 <!-- Custom Theme JavaScript -->
 <script src="js/custom.js"></script>
+
+<script type="text/javascript">
+	jQuery(document).ready(function($) {
+		//adiciona a todos 'a href' o efeito de scroll
+		$(".scroll-b").click(function(event){
+			//adiciona delay no scroll da pagina
+			event.preventDefault();
+			$('html,body').animate({scrollTop:$(this.hash).offset().top}, 1000);
+		});
+	});
+</script>
 
 </body>
 
