indentacao do codigo da index

--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
 			<a href="#about" class="btn btn-skin">Mais info</a>
 		</div>
 
-
-
 	</div>
 </section>
 <!-- /Section: intro -->
@@ -140,16 +138,11 @@
 							<h5>Conscientização  da sociedade:
 							</h5>
 							<p class="subtitle">
-								Evento Tarde Azul realizado no parque
-								Getulio Vargas com parceria da coordenadoria
-								da acessibilidade da prefeitura municipal
-								de Caxias do sul
-
+								Evento Tarde Azul realizado no parque Getulio Vargas com parceria da coordenadoria da acessibilidade da prefeitura municipal de Caxias do sul
 							</p>
 
 						</div>
 					</div>
-
 
 				</div>
 
@@ -160,10 +153,7 @@
 
 							</h5>
 							<p class="subtitle">
-								Reunião mensal com Familiares e
-								grupo de apoio
-
-
+								Reunião mensal com Familiares e grupo de apoio
 							</p>
 						</div>
 					</div>
@@ -172,15 +162,8 @@
 
 					<div class="team boxed-grey">
 						<div class="inner">
-							<h5>Disseminação do conhecimento sobre  Autismo
-								Orientação sobre o tema e palestras.
-
-
-							</h5>
+							<h5>Disseminação do conhecimento sobre  Autismo Orientação sobre o tema e palestras.</h5>
 							<p class="subtitle">
-
-
-
 							</p>
 						</div>
 					</div>
@@ -189,18 +172,9 @@
 				<div class="col-xs-6 col-sm-3 col-md-3">
 					<div class="team boxed-grey">
 						<div class="inner">
-							<h5>Defesa dos direitos das pessoas
-								com autismo:
-
-
-
-							</h5>
+							<h5>Defesa dos direitos das pessoas com autismo:</h5>
 							<p class="subtitle">
-								participação em audiências
-								Publicas, Conselhos municipais
-								da deficiência e saúde
-
-
+								Participação em audiências Publicas, Conselhos municipais da deficiência e saúde
 							</p>
 						</div>
 					</div>
@@ -209,17 +183,9 @@
 				<div class="col-xs-6 col-sm-3 col-md-3">
 					<div class="team boxed-grey">
 						<div class="inner">
-							<h5>Eventos beneficentes:
-
-
-
-
-
-							</h5>
+							<h5>Eventos beneficentes:</h5>
 							<p class="subtitle">
 								Almoços, feiras roupas
-
-
 							</p>
 						</div>
 					</div>
@@ -240,8 +206,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 
 					<div class="section-heading">
-						<h2>Atividades recentes
-						</h2>
+						<h2>Atividades recentes</h2>
 						<p></p>
 					</div>
 
@@ -249,6 +214,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="container">
 
 		<div class="row">
