--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
 <section id="intro" class="intro">
 	<div class="slogan container">
 		<div class="row">
-			<h1 class="pull-left">AMA Caxias do Sul</h1>
+			<div class="col-xs-10 col-sm-6">
+				<h1 class="pull-left">AMA Caxias do Sul</h1>
+			</div>
+
 		</div>
 
 		<div class="row">
-			<p class="pull-left">Autismo não tem cura, preconceito sim!</p>
+			<div class="col-xs-9">
+				<p class="pull-left">Autismo não tem cura, preconceito sim!</p>
+			</div>
 		</div>
 
-		<div class="row pull-left">
-			<a href="#about" class="btn btn-skin">Mais info</a>
+		<div class="row pull-center">
+			<div class="col-xs-9">
+				<a href="#about" class="btn btn-skin">Mais info</a>
+			</div>
 		</div>
 
 	</div>
@@ -131,7 +138,7 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="col-xs-12 col-sm-4 col-md-3">
 
 					<div class="team boxed-grey">
 						<div class="inner">
@@ -146,7 +153,7 @@
 
 				</div>
 
-				<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="col-xs-12 col-sm-3 col-md-3">
 					<div class="team boxed-grey">
 						<div class="inner">
 							<h5>Apoio as famílias:
@@ -169,7 +176,7 @@
 					</div>
 				</div>
 
-				<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="col-xs-12 col-sm-3 col-md-3">
 					<div class="team boxed-grey">
 						<div class="inner">
 							<h5>Defesa dos direitos das pessoas com autismo:</h5>
@@ -180,7 +187,7 @@
 					</div>
 				</div>
 
-				<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="col-xs-12 col-sm-3 col-md-3">
 					<div class="team boxed-grey">
 						<div class="inner">
 							<h5>Eventos beneficentes:</h5>
@@ -221,22 +228,22 @@
 			<div class="col-sm-12 col-md-12 col-lg-12" >
 
 				<div class="row gallery-item">
-					<div class="col-md-1"></div>
 
-					<div class="col-md-3">
-						<a href="img/atividades/1.jpg" title="3 Parada tarde azul: 2 de abril dia mundial da conscientização do  Autismo" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/atividades/1@2x.jpg">
+
+					<div class="col-md-4 col-sm-3 col-xs-5">
+						<a href="img/atividades/1.jpg" title="3 Parada tarde azul: 2 de abril dia mundial da conscientização do  Autismo" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/1.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
 
-					<div class="col-md-3">
-						<a href="img/atividades/2.jpg" title="Almoço para angariar fundo" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/atividades/1@2x.jpg">
+					<div class="col-md-4 col-sm-3 col-xs-5">
+						<a href="img/atividades/2.jpg" title="Almoço para angariar fundo" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/2.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
 
-					<div class="col-md-3">
-						<a href="img/atividades/3.jpg" title="Feira de roupas" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/atividades/1@2x.jpg">
+					<div class="col-md-4 col-sm-3 col-xs-5">
+						<a href="img/atividades/3.jpg" title="Feira de roupas" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/3.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
