ajustado href e alinhamento do botao mais info do inicio da pagina

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 			</div>
 		</div>
 
-		<div class="row pull-center">
+		<div class="row pull-left">
 			<div class="col-xs-9">
-				<a href="#about" class="btn btn-skin">Mais info</a>
+				<a href="#quem-somos" class="btn btn-skin scroll-b">Mais info</a>
 			</div>
 		</div>
 
