adicionado background nas imagens da secao atividades recentes e ajustado alinhamento das mesmas

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <!-- /Section: o-que-fazemos -->
 
 <!-- Section atividades-recentes-->
-<section id="atividades-recentes" class="home-section text-center bg-gray">
+<section id="atividades-recentes" class="home-section text-center">
 	<div class="heading-atividades marginbot-50">
 		<div class="container">
 			<div class="row">
@@ -228,21 +228,25 @@
 			<div class="col-sm-12 col-md-12 col-lg-12" >
 
 				<div class="row gallery-item">
+					<div class="col-md-1 col-sm-1 col-xs-1"></div>
 
-
-					<div class="col-md-4 col-sm-3 col-xs-5">
+					<div class="col-md-4 col-sm-3 col-xs-5 boxed-grey">
 						<a href="img/atividades/1.jpg" title="3 Parada tarde azul: 2 de abril dia mundial da conscientização do  Autismo" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/1.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-3 col-xs-5">
+					<div class="col-md-1 col-sm-1 col-xs-1"></div>
+
+					<div class="col-md-4 col-sm-3 col-xs-5 boxed-grey">
 						<a href="img/atividades/2.jpg" title="Almoço para angariar fundo" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/2.jpg" class="img-responsive" alt="img">
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-3 col-xs-5">
+					<div class="col-md-1 col-sm-1 col-xs-1"></div>
+
+					<div class="col-md-4 col-sm-3 col-xs-5 boxed-grey">
 						<a href="img/atividades/3.jpg" title="Feira de roupas" data-lightbox-gallery="gallery1">
 							<img src="img/atividades/3.jpg" class="img-responsive" alt="img">
 						</a>
