implementado mailto no rodape

--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-lg-12">
-
+            <div class="col-md-12 col-lg-12 text-left">
+                <a href="mailto:brunomarsilio@ftec.com.br"><strong><i class="fa fa-envelope"></i> brunomarsilio@ftec.com.br</strong></a>
             </div>
         </div>
     </div>
