--- a/index.html
+++ b/index.html
@@ -53,21 +53,14 @@
 <section id="intro" class="intro">
     <div class="slogan container">
         <div class="row">
-            <div class="col-xs-10 col-sm-6">
+            <div class="col-xs-12 col-sm-6">
                 <h1 class="pull-left">AMA Caxias do Sul</h1>
             </div>
-
         </div>
 
         <div class="row">
-            <div class="col-xs-9">
+            <div class="col-xs-12">
                 <p class="pull-left">Autismo não tem cura, preconceito sim!</p>
-            </div>
-        </div>
-
-        <div class="row pull-left">
-            <div class="col-xs-9">
-                <a href="#quem-somos" class="btn btn-skin scroll-b">Mais info</a>
             </div>
         </div>
 
@@ -90,7 +83,7 @@
             </div>
 
             <div class="row gallery-item">
-                <div class="col-xs-6 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-3">
 
                     <div class="team boxed-grey">
                         <div class="inner">
@@ -104,7 +97,7 @@
 
                 </div>
 
-                <div class="col-xs-6 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-3">
 
                     <div class="team boxed-grey">
                         <div class="inner">
@@ -118,7 +111,7 @@
 
                 </div>
 
-                <div class="col-xs-6 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-3">
 
                     <div class="team boxed-grey">
                         <div class="inner">
@@ -132,7 +125,7 @@
 
                 </div>
 
-                <div class="col-xs-6 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-3">
 
                     <div class="team boxed-grey">
                         <div class="inner">
@@ -197,6 +190,7 @@
         <div class="container">
 
             <div class="row">
+
                 <div class="col-xs-12 col-sm-4 col-md-3">
 
                     <div class="team boxed-grey">
@@ -284,31 +278,44 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12" >
 
-                <div class="row gallery-item">
+            <div class="row gallery-item">
+                <div class="col-xs-1 col-sm-1 col-md-1"></div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
 
-                    <div class="col-md-3">
-                        <a href="img/atividades/atividade-001.jpg" title="3 Parada tarde azul: 2 de abril dia mundial da conscientização do  Autismo" data-lightbox-gallery="gallery2">
-                            <img src="img/atividades/atividade-001.jpg" class="img-responsive" alt="img">
-                        </a>
+                    <div class="team boxed-grey">
+                        <div class="inner">
+                            <a href="img/atividades/atividade-001.jpg" title="3 Parada tarde azul: 2 de abril dia mundial da conscientização do  Autismo" data-lightbox-gallery="gallery2">
+                                <img src="img/atividades/atividade-001.jpg" class="img-responsive" alt="img">
+                            </a>
+                        </div>
                     </div>
+                </div>
 
-                    <div class="col-md-3">
-                        <a href="img/atividades/atividade-002.jpg" title="Almoço para angariar fundo" data-lightbox-gallery="gallery2">
-                            <img src="img/atividades/atividade-002.jpg" class="img-responsive" alt="img">
-                        </a>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+
+                    <div class="team boxed-grey">
+                        <div class="inner">
+                            <a href="img/atividades/atividade-002.jpg" title="Almoço para angariar fundo" data-lightbox-gallery="gallery2">
+                                <img src="img/atividades/atividade-002.jpg" class="img-responsive" alt="img">
+                            </a>
+                        </div>
                     </div>
+                </div>
 
-                    <div class="col-md-3">
-                        <a href="img/atividades/atividade-003.jpg" title="Feira de roupas" data-lightbox-gallery="gallery2">
-                            <img src="img/atividades/atividade-003.jpg" class="img-responsive" alt="img">
-                        </a>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+
+                    <div class="team boxed-grey">
+                        <div class="inner">
+                            <a href="img/atividades/atividade-003.jpg" title="Feira de roupas" data-lightbox-gallery="gallery2">
+                                <img src="img/atividades/atividade-003.jpg" class="img-responsive" alt="img">
+                            </a>
+                        </div>
                     </div>
-
                 </div>
 
             </div>
+
         </div>
     </div>
 </section>
