--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 <script src="js/gnmenu.js"></script>
 <script src="js/jquery.scrollTo.js"></script>
 <script src="js/nivo-lightbox.min.js"></script>
-<script src="js/stellar.js"></script>
+<script src="js/stellar.min.js"></script>
 <!-- Custom Theme JavaScript -->
 <script src="js/custom.js"></script>
 
