--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/nivo-lightbox.css" rel="stylesheet" />
     <link href="css/nivo-lightbox-theme/default/default.css" rel="stylesheet" type="text/css" />
-    <link href="css/animate.css" rel="stylesheet" />
+    <link href="css/animate.min.css" rel="stylesheet" />
 
     <!-- Squad theme CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <link href="color/default.css" rel="stylesheet">
 
 </head>
