--- a/index.html
+++ b/index.html
@@ -54,15 +54,16 @@
 </div>
 
 <!-- Section: intro -->
+
 <section id="intro" class="intro">
-    <div class="slogan container">
-        <div class="row">
+    <div class="slogan">
+        <div class="row" style="width: 100%; padding-left: 15px">
             <div class="col-xs-11 col-sm-6">
                 <h1 class="pull-left">AMA Caxias do Sul</h1>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="width: 100%; padding-left: 15px">
             <div class="col-xs-11">
                 <p class="pull-left">Autismo não tem cura, preconceito sim!</p>
             </div>
@@ -73,6 +74,7 @@
 <!-- /Section: intro -->
 
 <!-- Section: quem-somos -->
+
 <section id="quem-somos" class="home-section text-center bg-gray">
     <div class="heading-about marginbot-50">
         <div class="container">
@@ -151,6 +153,7 @@
 
 
 <!-- Section: o-que-e-autismo -->
+
 <section id="o-que-e-autismo" class="home-section text-center">
 
     <div class="heading-about marginbot-50">
@@ -174,6 +177,7 @@
 
 
 <!-- Section: o-que-fazemos -->
+
 <section id="o-que-fazemos" class="home-section text-center bg-gray">
     <div class="heading-atividades marginbot-50">
         <div class="container">
@@ -263,6 +267,7 @@
 <!-- /Section: o-que-fazemos -->
 
 <!-- Section atividades-recentes-->
+
 <section id="atividades-recentes" class="home-section text-center">
     <div class="heading-atividades marginbot-50">
         <div class="container">
@@ -283,7 +288,7 @@
 
         <div class="row">
 
-            <div class="row gallery-item">
+            <div class="row gallery-item container" style="width: 100%">
                 <div class="col-xs-1 col-sm-1 col-md-1"></div>
                 <div class="col-xs-11 col-sm-3 col-md-3">
 
