lancamento do site

--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-lg-12 text-left">
-                <a href="mailto:brunomarsilio@ftec.com.br"><strong><i class="fa fa-envelope"></i> brunomarsilio@ftec.com.br</strong></a>
+                <a href="mailto:ama.caxiasdosul@gmail.com"><strong><i class="fa fa-envelope"></i> ama.caxiasdosul@gmail.com</strong></a>
+                <br />
+                <a href="#"><strong><i class="fa fa-phone"></i> (54) 3019-1035</strong></a>
             </div>
         </div>
     </div>
